--- a/undead-memories-theme.html
+++ b/undead-memories-theme.html
@@ -262,6 +262,7 @@ body {
     padding: 0;
     overflow-x: hidden;
     box-sizing: border-box;
+    height: 100vh;
     opacity: 1.0;
     -webkit-transition: 1s opacity;
     -moz-transition: 1s opacity;
@@ -1443,9 +1444,9 @@ ol.notes li.note img.avatar {
     {/block:Pagination}
     
     <!---- FOOTER ---->
-    {block:ifFooter}
+    {block:ifFooter} {block:IndexPage}
     <div id="footer-div">&#169&nbsp{Title}&nbspest.&nbsp{CopyrightYears}</div>
-    {/block:ifFooter}
+    {/block:IndexPage} {/block:ifFooter}
     </div>
     <!-- end of main container -->
 </main>
