--- a/undead-memories-theme.html
+++ b/undead-memories-theme.html
@@ -524,7 +524,8 @@ ol li {max-width: 100%;}
     top: 0;
     width: 100%;
     height: 50px;
-    background-color: {color:Posts}7F;
+    background-color: {color:Posts}80;
+    backdrop-filter: blur(2px);
     display: flex;
     justify-content: flex-start;
     align-items: center;
