--- a/magicookie-theme.html
+++ b/magicookie-theme.html
@@ -208,12 +208,12 @@
 
 ::-moz-selection {
     color: {color:Selection Text};
-    background-color: {color:Selection Background}A6;
+    background-color: {color:Selection Background};
 }
 
 ::selection {
     color: {color:Selection Text};
-    background-color: {color:Selection Background}A6;
+    background-color: {color:Selection Background};
 }
 
 ::-webkit-scrollbar {
@@ -425,10 +425,10 @@ pre {
 
 #star-1, #star-2, #star-3 {
     position: absolute;
-    width: 2em;
-    height: 2em;
-    color: {color:Accent}00;
-    fill: {color:Accent}8E;
+    width: 1.8em;
+    height: 1.8em;
+    color: {color:Accent};
+    fill: {color:Accent};
     transition: all 0.3s;
     -webkit-transition: all 0.3s ease-out;
     -moz-transition: all 0.3s ease-out;
