--- a/stepping-on-roaches-theme.html
+++ b/stepping-on-roaches-theme.html
@@ -38,7 +38,7 @@
 {/block:Hidden}
 
 <!----- STYLESHEETS / SCRIPTS ----->
-<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
+<script src="https://unpkg.com/feather-icons"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
 <!-- npf fix -->
